app/k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: mew-app-service
  namespace: pakistan
  labels:
    app: mew-app
spec:
  type: ClusterIP

  selector:
    app: mew-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
