app/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mew-app-ingress
  namespace: pakistan

spec:
  ingressClassName: haproxy

  rules:
  - host: mew.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: mew-app-service

            port:
              number: 80
